# powerfs

./: .cnb.yml  .dockerignore  .gitignore  .gitmodules  Cargo.toml  FUSE_TEST_SPEC.md  README.md  TESTING_GUIDELINES.md  design.md  kv-upgrade-plan.md  local-mixed_rw-0-verify.state  local-mt_seq_write-0-verify.state  local-mt_seq_write-1-verify.state  local-mt_seq_write-2-verify.state  local-mt_seq_write-3-verify.state  local-rand_write-0-verify.state  local-seq_write-0-verify.state  log  note.md  process.md  run-tests.sh  s3-design.md  start-cluster.sh  stop-cluster.sh  test.md
articles/: 01-hpc-ai-storage.md  02-protocol-agnostic.md  03-ceph-complex.md
benchmark/: fio_metadata_test.fio  performance_evaluation.md
config/: filer-1.toml  filer-2.toml  filer.toml  fuse-1.toml  fuse-2.toml  master-1.toml  master-2.toml  master-3.toml  monitor.toml  s3.toml  volume-1.toml  volume-2.toml  volume-3.toml  volume-crdt-1.toml
demo/: README.md  (+1 more)
powerfs-cli/: Cargo.toml
powerfs-cli/src/: client.rs  main.rs  volume_client.rs
powerfs-cli/src/commands/: assign.rs  cluster_add.rs  cluster_remove.rs  cluster_status.rs  cluster_transfer.rs  conflicts.rs  grow.rs  heartbeat.rs  kv.rs  lookup.rs  mod.rs  mount.rs  read.rs  status.rs  volume_list.rs  write.rs
powerfs-common/: Cargo.toml  build.rs
powerfs-common/src/: build_info.rs  config.rs  constants.rs  error.rs  event.rs  lib.rs  retry.rs  storage.rs  system_metrics.rs  traits.rs  types.rs  utils.rs
powerfs-common/src/raft/: mod.rs  storage.rs
powerfs-common/src/storage/: rocksdb.rs
powerfs-common/tests/: constants_test.rs  error_test.rs  storage_keys_test.rs  types_test.rs  utils_test.rs
powerfs-core/: Cargo.toml  build.rs
powerfs-core/benches/: kv_benchmark.rs  minimal_bench.rs  storage_benchmark.rs  vllm_benchmark.rs
powerfs-core/examples/: spdk_test.rs
powerfs-core/src/: bitrot_scanner.rs  config.rs  ec_thread.rs  hpc.rs  index.rs  kv_cache.rs  kv_cache_persist.rs  lib.rs  needle.rs  provider_impl.rs  storage.rs  volume.rs
powerfs-core/src/crdt/: mod.rs  or_set.rs
powerfs-core/src/kv/: block_loader.rs  replica.rs
powerfs-core/src/storage_backend/: error.rs  factory.rs  local_fs.rs  migration.rs  mod.rs  spdk_backend.rs  spdk_ffi.h  spdk_rpc.rs  spdk_stub.c  types.rs
powerfs-core/tests/: config_test.rs  crdt_or_set_test.rs  ec_perf_test.rs  ec_test.rs  index_test.rs  kv_cache_test.rs  kv_crdt_perf_test.rs  kv_persistence_test.rs  needle_test.rs  storage_benchmark_test.rs  storage_manager_test.rs  volume_test.rs
powerfs-filer/: Cargo.toml  build.rs
powerfs-filer/examples/: crdt_integration_test.rs  crdt_perf_benchmark.rs  test_filer_meta.rs  test_grpc_connectivity.rs  test_list_entries.rs
powerfs-filer/proto/: filer.proto
powerfs-filer/src/: bucket_manager.rs  crdt_orset.rs  entry_manager.rs  grpc_service.rs  lib.rs  main.rs  meta_shard_manager.rs  metadata_store.rs  posix_service.rs  powerfs.rs  provider_impl.rs  raft_group_manager.rs  s3_handler.rs  server.rs  shard_scheduler.rs  shard_store.rs  shard_strategy.rs  volume_router.rs
powerfs-filer/src/tests/: integration_test.rs
powerfs-fuse/: Cargo.toml  Cargo.toml.community
powerfs-fuse/benches/: fs_bench.rs
powerfs-fuse/src/: cache.rs  client.rs  data_manager.rs  dir_cache_provider.rs  error.rs  file_layout.rs  flush_manager.rs  fuse.rs  fuser_fs.rs  inode_allocator.rs  lib.rs  main.rs  metadata_benchmark.rs  metadata_manager.rs  orset.rs  posix_projection.rs
powerfs-fuse/src/debug/: mod.rs  timed_locks.rs
powerfs-fuse/tests/: coherence_phase0_test.rs  coherence_phase1_test.rs  concurrent_consistency.rs  fs_call_validation_test.rs  fs_test.rs  full_mount_integration_test.rs  fuse_basic_test.rs  fuse_minimal_test.rs  mount_verification_test.rs  posix_compat_test.rs  posix_tests.rs  rfs_tester_fuse_test.rs  sync_test.rs  test_harness.rs  volume_integration_test.rs  volume_verification_test.rs
powerfs-kernel/: Cargo.toml
powerfs-kernel/src/: client.rs  io_uring.rs  lib.rs  protocol.rs
powerfs-kv-client/: Cargo.toml
powerfs-kv-client/src/: client.rs  lib.rs  s3_test_client.rs  spdk_test_client.rs
powerfs-master/: Cargo.toml  build.rs
powerfs-master/proto/: master.proto
powerfs-master/src/: directory_tree.rs  kv_cache_service.rs  lib.rs  master.rs  metadata_manager.rs  metrics.rs  proto.rs  provider_impl.rs  raft_client.rs  raft_node.rs  raft_server.rs  raft_storage.rs  server.rs  tracking_allocator.rs  volume_assigner.rs  volume_client.rs  volume_router.rs
powerfs-master/src/lock_manager/: local_lock.rs  mod.rs  raft_lease_lock.rs
powerfs-master/src/proto/: powerfs.rs
powerfs-master/src/s3/: auth.rs  cache.rs  directory_tree_api.rs  master_api.rs  master_client.rs  mod.rs  server.rs
powerfs-master/src/volume_proto/: mod.rs  powerfs.rs
powerfs-master/tests/: cluster.rs  coherence_failover_test.rs  coherence_phase2_test.rs  coherence_phase3_test.rs  conflict_detection_integration.rs  e2e_test.rs  fault_tolerance.rs  filer_api_test.rs  leader_election.rs  log_replication.rs  master_outage_e2e_test.rs  multi_client_consistency_test.rs  raft_integration_test.rs  rfs_tester_integration.rs  storage_schema_v2_test.rs  test.md
powerfs-monitor/: Cargo.toml
powerfs-monitor/src/: alert_engine.rs  event.rs  event_bus.rs  lib.rs  main.rs  metric_store.rs
powerfs-monitor/src/auth/: jwt.rs  kv_access_key.rs  middleware.rs  mod.rs  rate_limiter.rs  resource_owner.rs  role.rs  s3_access_key.rs  user.rs  user_store.rs
powerfs-sdk/python/: pyproject.toml
powerfs-sdk/python/examples/: kv_benchmark.py  kv_example.py
powerfs-sdk/python/powerfs/: __init__.py  kv.py
powerfs-server/: Cargo.toml
powerfs-server/src/: main.rs
powerfs-volume/: Cargo.toml  build.rs
powerfs-volume/proto/: powerfs.proto
powerfs-volume/src/: lib.rs  main.rs  master_client.rs  proto.rs  range_lease.rs  server.rs
powerfs-volume/tests/: grpc_test.rs
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: basic_usage.py  conflict_agent.py  notification_agent.py
python-sdk/powerfs/: __init__.py  client.py  exceptions.py  types.py
(+196 files in other folders)
