[package]
name = "powerfs-cli"
version = "0.1.0"
edition = "2021"
authors = ["PowerFS Team <jiangjinhu@fudan.edu.cn>"]
description = "CLI tool for PowerFS testing and administration"

[dependencies]
powerfs-common = { path = "../powerfs-common" }
powerfs-master = { path = "../powerfs-master" }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }