[package]
name = "powerfs-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
spdk = ["dep:libc", "dep:pkg-config"]
spdk-stub = ["dep:libc", "dep:cc"]

[dependencies]
powerfs-common = { path = "../powerfs-common" }
priority-queue = "1.4"
reed-solomon-erasure = "6.0"
bytes = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sled = { workspace = true }
blake3 = { workspace = true }
crossbeam = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
rocksdb = { workspace = true }
base64 = "0.22"
regex = "1.10"
rayon = "1.10"
libc = { version = "0.2", optional = true }
cc = { version = "1.0", optional = true }

[build-dependencies]
cc = { version = "1.0", optional = true }
pkg-config = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.10"
crc32c = "0.6"
criterion = "0.4"

[[example]]
name = "spdk_bdev_test"
path = "../examples/spdk_bdev_test.rs"

[[example]]
name = "spdk_simple_test"
path = "../examples/spdk_simple_test.rs"
