[package]
name = "powerfs-fuse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "powerfs-fuse"
path = "src/main.rs"

[dependencies]
powerfs-common = { path = "../powerfs-common" }
powerfs-core = { path = "../powerfs-core" }
powerfs-master = { path = "../powerfs-master" }
powerfs-volume = { path = "../powerfs-volume" }
fuse-backend-rs = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
lru = { workspace = true }
