[package]
name = "powerfs-kv-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[features]
default = []
spdk-stub = ["powerfs-core/spdk-stub"]

[dependencies]
powerfs-common = { path = "../powerfs-common" }
powerfs-core = { path = "../powerfs-core" }
powerfs-master = { path = "../powerfs-master" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
