[package]
name = "powerfs-master"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = { version = "0.11" }

[dependencies]
powerfs-common = { path = "../powerfs-common" }
powerfs-core = { path = "../powerfs-core" }
tokio = { workspace = true }
raft = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rocksdb = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
protobuf = "3"
slog = "2"
