[package]
name = "powerfs-master"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = { version = "0.11" }

[dev-dependencies]
tempfile = "3.8"
rfs_tester = { path = "../rfs_tester" }

[dependencies]
powerfs-common = { path = "../powerfs-common" }
powerfs-core = { path = "../powerfs-core" }
tokio = { workspace = true }
crossbeam = { workspace = true }
raft = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rocksdb = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
protobuf = "2"
slog = "2"
prometheus = "0.13"
hyper = { version = "1", features = ["full"] }
lazy_static = "1.4"
axum = "0.6"
redis = { version = "0.22", features = ["tokio-comp"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tower = "0.4"
sysinfo = "0.30"
