[package]
name = "powerfs-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "powerfs-monitor"
path = "src/main.rs"

[dependencies]
powerfs-common = { path = "../powerfs-common" }
powerfs-core = { path = "../powerfs-core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { version = "0.6", features = ["ws", "json", "multipart"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tower-http = { version = "0.4", features = ["cors"] }
futures = { workspace = true }
futures-util = { version = "0.3" }
clap = { workspace = true }
env_logger = { workspace = true }
rand = { version = "0.8" }
reqwest = { version = "0.11", features = ["json"] }
regex = { version = "1" }
jsonwebtoken = "9"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rocksdb = { workspace = true }
tower = { version = "0.4", features = ["util"] }

[dev-dependencies]
tempfile = "3"