[package]
name = "powerfs-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "powerfs"
path = "src/main.rs"

[features]
# 启用真实 SPDK backend (需要 SPDK 环境和 libpowerfs-spdk-wrapper.so)
spdk = ["powerfs-core/spdk"]
# 启用 SPDK stub backend (无 SPDK 环境时测试用,空实现)
spdk-stub = ["powerfs-core/spdk-stub"]

[dependencies]
powerfs-common = { path = "../powerfs-common" }
powerfs-core = { path = "../powerfs-core" }
powerfs-master = { path = "../powerfs-master" }
powerfs-volume = { path = "../powerfs-volume" }
powerfs-fuse = { path = "../powerfs-fuse" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
bytes = { workspace = true }
chrono = { workspace = true }
