[package]
name = "powerfs-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "powerfs"
path = "src/main.rs"

[features]
default = ["fuse", "kv", "s3", "monitor", "redis-event"]

fuse = ["powerfs-fuse"]
kv = ["powerfs-master/kv"]
s3 = ["powerfs-filer"]
monitor = []

spdk = ["powerfs-core/spdk"]
spdk-stub = ["powerfs-core/spdk-stub"]

redis-event = ["dep:redis", "powerfs-common/redis-event", "powerfs-monitor/redis", "powerfs-filer/redis-event"]
redis-metrics = ["powerfs-common/redis-metrics"]

[dependencies]
powerfs-common = { path = "../powerfs-common" }
powerfs-core = { path = "../powerfs-core" }
powerfs-master = { path = "../powerfs-master" }
powerfs-volume = { path = "../powerfs-volume" }
powerfs-fuse = { path = "../powerfs-fuse", optional = true }
powerfs-filer = { path = "../powerfs-filer", optional = true }
powerfs-monitor = { path = "../powerfs-monitor", optional = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
bytes = { workspace = true }
chrono = { workspace = true }
tikv-jemallocator = "0.5"
redis = { version = "0.23", features = ["tokio-comp"], optional = true }
