[package]
name = "powerfs-volume"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = { version = "0.11" }

[dependencies]
powerfs-common = { path = "../powerfs-common" }
powerfs-core = { path = "../powerfs-core" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
