[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "powerfs-sdk"
version = "0.1.0"
description = "PowerFS Python SDK - Conflict Management API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "grpcio>=1.50.0",
    "protobuf>=4.21.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
]
