[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "powerfs-kv"
version = "0.1.0"
description = "PowerFS KV Python SDK"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
powerfs-kv = "powerfs.kv:main"

[tool.setuptools.packages.find]
where = ["."]
